--- a/css/styles.css
+++ b/css/styles.css
@@ -200,3 +200,53 @@ a.custom-card:hover {
 #searchProduct{
   margin-right: 4px;
 }
+
+/* productsinfo */
+p#tituloProducto{
+  margin-top: 2%;
+  font-size: 250%;
+}
+
+#padreImagenesP{
+  display: flex;
+
+}
+
+.imgProduct{
+  border-style: solid;
+  border-width: 1px;
+  width: 25%;
+  margin: 6px;
+}
+
+p#tituloComentarios{
+  margin-top: 10%;
+  font-size: x-large;
+}
+p#tituloComentar{
+  font-size: x-large;
+}
+
+ul#contenedor{
+  list-style: none;
+  margin-left: 1%;
+}
+
+#listaComm{
+  padding: 1%;
+}
+
+#puntajes{
+  width: 9%;
+  margin-bottom: 1%;
+
+}
+
+
+/* product info relacionados */
+
+div#contenedorProductosRel{
+  display: flex;
+  flex-direction: row;
+}
+
