--- a/css/styles.css
+++ b/css/styles.css
@@ -263,3 +263,32 @@ div#contenedorProductosRel{
   text-align: center;
   margin-top: 1%;
 }
+
+
+.tarjetaCostos{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 16px 0px 16px;
+}
+.tarjetaText{
+  align-items: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.costosTText{
+  font-size: medium;
+  padding-bottom: 0px;
+  margin: 0px;
+}
+.costosSText{
+  font-size: small;
+  padding-bottom: 10px;
+  margin: 0px;
+}
+
+#formaDePagoSet{
+  margin-top: 10px;
+}
